update security configs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/donation?createDatabaseIfNotExist=true
     driverClassName: com.mysql.cj.jdbc.Driver
-    password: Super@3abdou
+    password: roottoor
     username: root
   jpa:
     hibernate.ddl-auto: update
